glibc (2.3.6-3) UNRELEASED; urgency=low

  [ Aurelien Jarno]
  * Use a shell function instead of ifneq when testing a variable depending on
    $(curpass), otherwise it is only evaluated at the first pass.

  [ Clint Adams ]
  * Get rid of -o as a binary operator to [ in tzconfig and postinst.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 23 Feb 2006 21:46:25 +0100

glibc (2.3.6-2) unstable; urgency=low

   [ Denis Barbier ]
   * Modify debver2localesdep.pl, locales-depver and control files to provide
     a smooth upgrade in unstable when locales require changes in localedef.
     This is the first part for solving #352620, the proper dependency for
     locales will be set by the next upload.
   * debian/control: Clean up. Remove versioned dependencies on gettext,
     debianutils, tar, texinfo; these versions were already in oldstable.
     Drop references to localebin, wg15-locale, i18ndata, locale-ja, locale-ko,
     locale-vi, locale-zh, libc6-doc, glibcdoc and libc6 (<< 2.1-4).
   * debian/control: Split Build-Depends on several lines for readability
     purpose.
   * Add RON to locale/iso-4217.def and bump LOCALES_COMPAT_VER to 2.3.6-2.
   * Fix thousand separator for de_CH, and let other Swiss locales copy
     de_CH for LC_NUMERIC and LC_MONETARY sections.  (Closes: #345481)
   * Apply a patch from Fedora to define AM/PM strings in cy_GB and en_GB
     locales.  (Closes: #240901)
   * Fix the week definition for the C locale.
   * Check first_weekday fields against current CLDR snapshot.  Modified
     locales are *_GB (=2), ar_SY (=5), ms_MY (=2), id_ID (=2).  Add
     this field to more locales.
   * locale-gen: Replace 'test ... -a ...' by two tests.
   * Add an "All locales" option to the locales/locales_to_be_generated
     template.  When it is selected, /etc/locale.gen is a symlink to
     /usr/share/i18n/SUPPORTED.  (Closes: #321580, #323013)
   * Updated debconf translations:  (Closes: #353611)