@@ -3,6 +3,7 @@ glibc (2.3.6-3) UNRELEASED; urgency=low
   [ Aurelien Jarno]
   * Use a shell function instead of ifneq when testing a variable depending on
     $(curpass), otherwise it is only evaluated at the first pass.
+  * Add support for the ppc64 architecture.  (Closes: #301438).
 
   [ Clint Adams ]
   * Get rid of -o as a binary operator to [ in tzconfig and postinst.
